@@ -250,9 +250,7 @@ needs_link(SoName, NewBins) ->
 get_specs(Config, AppFile) ->
     case rebar_config:get_local(Config, port_specs, []) of
         [] ->
-            %% No spec provided. Construct a spec
-            %% from old-school so_name and sources
-            [port_spec_from_legacy(Config, AppFile)];
+            [];
         PortSpecs ->
             Filtered = filter_port_specs(PortSpecs),
             OsType = os:type(),
